output/VERSION_ARM/Build_ARM.log
"Target_ARM" 
06.01.2019  9:15:46,12 
"preprocess it" 
"create assembly listings" 
"compile it" 
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_start_init_sw.c: In function 'OS_INIT_SW':
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_start_init_sw.c:8:20: error: expected expression before '{' token
    OS_SW_BUG[15] = {os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug};
                    ^
"assemble it" 
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_start_init_sw.c: In function 'OS_INIT_SW':
E:\NeuOrga\Programmieren\c_cpp\github_os\input\src\os_base\os_start_init_sw.c:8:20: error: expected expression before '{' token
    OS_SW_BUG[15] = {os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug,os_bug_no_bug};
                    ^
"link it" 
